--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!doctype html>
-<html lang="en">
+<html lang="lv">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❄️</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>noskrien-ziemu</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Rezultātu Salīdzinājums | Noskrien Ziemu</title>
+    <meta name="title" content="Rezultātu Salīdzinājums | Noskrien Ziemu" />
+    <meta name="description" content="Salīdzini skrējēju rezultātus Noskrien Ziemu sacensībās. Detalizēta analīze un vizualizācija." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://noskrienziemu.lv/" />
+    <meta property="og:title" content="Rezultātu Salīdzinājums" />
+    <meta property="og:description" content="Salīdzini skrējēju rezultātus Noskrien Ziemu sacensībās" />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://noskrienziemu.lv/" />
+    <meta property="twitter:title" content="Rezultātu Salīdzinājums" />
+    <meta property="twitter:description" content="Salīdzini skrējēju rezultātus Noskrien Ziemu sacensībās" />
+    <meta property="twitter:image" content="/og-image.png" />
+
+    <!-- PWA & Mobile -->
+    <meta name="theme-color" content="#00AEEF" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="NZ Rezultāti" />
+
+    <!-- Performance & Security -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   </head>
   <body>
     <div id="root"></div>
